--- a/index.html
+++ b/index.html
@@ -80,31 +80,31 @@
   <!-- Toppings -->
   <div>
     Toppings: 
-    <input type="checkbox" id="pepperoni" name="toppings[]" value="Pepperoni" />
+    <input type="checkbox" id="pepperoni" name="toppings" value="Pepperoni" />
     <label for="pepperoni">Pepperoni</label>
-    <input type="checkbox" id="bacon" name="toppings[]" value="Bacon" />
+    <input type="checkbox" id="bacon" name="toppings" value="Bacon" />
     <label for="bacon">Bacon</label>
-    <input type="checkbox" id="spicy_italian_sausage" name="toppings[]" value="Spicy Italian Sausage" />
+    <input type="checkbox" id="spicy_italian_sausage" name="toppings" value="Spicy Italian Sausage" />
     <label for="spicy_italian_sausage">Spicy Italian Sausage</label>
-    <input type="checkbox" id="ground_beef" name="toppings[]" value="Ground Beef" />
+    <input type="checkbox" id="ground_beef" name="toppings" value="Ground Beef" />
     <label for="ground_beef">Ground Beef</label>
-    <input type="checkbox" id="pineapple" name="toppings[]" value="Pineapple" />
+    <input type="checkbox" id="pineapple" name="toppings" value="Pineapple" />
     <label for="pineapple">Pineapple</label>
-    <input type="checkbox" id="green_pepper" name="toppings[]" value="Green Pepper" />
+    <input type="checkbox" id="green_pepper" name="toppings" value="Green Pepper" />
     <label for="green_pepper">Green Pepper</label>
-    <input type="checkbox" id="jalapenos" name="toppings[]" value="Jalapenos" />
+    <input type="checkbox" id="jalapenos" name="toppings" value="Jalapenos" />
     <label for="jalapenos">Jalapenos</label>
-    <input type="checkbox" id="sliced_tomatoes" name="toppings[]" value="Sliced Tomatoes" />
+    <input type="checkbox" id="sliced_tomatoes" name="toppings" value="Sliced Tomatoes" />
     <label for="sliced_tomatoes">Sliced Tomatoes</label>
-    <input type="checkbox" id="zuchinni" name="toppings[]" value="Zuchinni" />
+    <input type="checkbox" id="zuchinni" name="toppings" value="Zuchinni" />
     <label for="zuchinni">Zuchinni</label>
-    <input type="checkbox" id="chicken" name="toppings[]" value="Chicken" />
+    <input type="checkbox" id="chicken" name="toppings" value="Chicken" />
     <label for="chicken">Chicken</label>
-    <input type="checkbox" id="goat_cheese" name="toppings[]" value="Goat Cheese" />
+    <input type="checkbox" id="goat_cheese" name="toppings" value="Goat Cheese" />
     <label for="goat_cheese">Goat Cheese</label>
-    <input type="checkbox" id="sundried_tomatoes" name="toppings[]" value="Sundried Tomatoes" />
+    <input type="checkbox" id="sundried_tomatoes" name="toppings" value="Sundried Tomatoes" />
     <label for="sundried_tomatoes">Sundried Tomatoes</label>
-    <input type="checkbox" id="onion" name="toppings[]" value="Onion" />
+    <input type="checkbox" id="onion" name="toppings" value="Onion" />
     <label for="onion">Onion</label>
   </div>
   <div>
